Added crab stuffed mushrooms recipe page
Directions and ingredients included

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="./pages/swedish_meatballs.html">Swedish Meatballs</a>
         </li>
+        <li>
+            <a href="./pages/crab_stuffed_mushrooms.html">Crab Stuffed Mushroom</a>
+        </li>
     </ul>
 </body>
 </html>
