Added soft oatmeal cookies page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="./pages/crab_stuffed_mushrooms.html">Crab Stuffed Mushroom</a>
         </li>
+        <li>
+            <a href="./pages/soft_oatmeal_cookies.html">Soft Oatmeal Cookies</a>
+        </li>
     </ul>
 </body>
 </html>
