Added styling to the page

--- a/pages/crab_stuffed_mushrooms.html
+++ b/pages/crab_stuffed_mushrooms.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crab Stuffed Mushrooms</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Perfect Crab-Stuffed Mushrooms</h1>
     <img src="https://www.allrecipes.com/thmb/-lXuY8TF1OcKW-1v4vic5EHYyyE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5939577-perfect-crab-stuffed-mushrooms-Mackenzie-Schieck-4x3-1-6715b79239274a5e99c473f8d397814f.jpg" alt="Crab Stuffed Mushrooms">
     <p>These little goodies are the perfect addition to your next holiday gathering or even the perfect appetizer to serve before a cozy dinner at home. Everyone will be dazzled by every delicious bite (they won't be able to keep their hands off of them!) You can smile while you think of how easy they were to toss together! And the best part - I usually end up with leftover stuffing, which freezes beautifully until the next carry-in!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 tablespoons butter</li>
-        <li>2 tablespoons minced green onion</li>
-        <li>1 cup cooked crabmeat, finely chopped</li>
-        <li>1/2 cup dry bread crumbs</li>
-        <li>1/4 cup shredded Monterey Jack cheese</li>
-        <li>1 egg, breaten</li>
-        <li>1 teaspoon lemon juice</li>
-        <li>1/2 teaspoon dried dill weed</li>
-        <li>1/2 cup butter, melted</li>
-        <li>1 1/2 pounds fresh button mushrooms, stems removed</li>
-        <li>1/2 cup shredded Monterey Jack cheese</li>
-        <li>1/4 cup dry white wine</li>
-    </ul>
-    <h2>Directions</h2>
-    <ol>
-        <li>Preheat oven to 400 degrees F (200 degrees C).</li>
-        <li>Melt 2 tablespoons butter in a skillet; cook and stir green onion until softened, about 2 minutes. Transfer green onion to a bowl. Stir in crabmeat, bread crumbs, 1/4 cup Monterey Jack cheese, egg, lemon juice, and dill weed until well mixed.</li>
-        <li>Pour 1/2 cup melted butter in a 9x13-inch baking dish; turn mushroom caps in butter to coat. Fill mushroom caps with the crab mixture and sprinkle with remaining 1/2 cup Monterey Jack cheese. Pour white wine into baking dish.</li>
-        <li>Bake in preheated oven until cheese is melted and lightly brown, 15 to 20 minutes.</li>
-    </ol>
+    <div class="content">
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 tablespoons butter</li>
+                <li>2 tablespoons minced green onion</li>
+                <li>1 cup cooked crabmeat, finely chopped</li>
+                <li>1/2 cup dry bread crumbs</li>
+                <li>1/4 cup shredded Monterey Jack cheese</li>
+                <li>1 egg, breaten</li>
+                <li>1 teaspoon lemon juice</li>
+                <li>1/2 teaspoon dried dill weed</li>
+                <li>1/2 cup butter, melted</li>
+                <li>1 1/2 pounds fresh button mushrooms, stems removed</li>
+                <li>1/2 cup shredded Monterey Jack cheese</li>
+                <li>1/4 cup dry white wine</li>
+            </ul>
+        </div>
+        <div class="directions">
+            <h2>Directions</h2>
+            <ol>
+                <li>Preheat oven to 400 degrees F (200 degrees C).</li>
+                <li>Melt 2 tablespoons butter in a skillet; cook and stir green onion until softened, about 2 minutes. Transfer green onion to a bowl. Stir in crabmeat, bread crumbs, 1/4 cup Monterey Jack cheese, egg, lemon juice, and dill weed until well mixed.</li>
+                <li>Pour 1/2 cup melted butter in a 9x13-inch baking dish; turn mushroom caps in butter to coat. Fill mushroom caps with the crab mixture and sprinkle with remaining 1/2 cup Monterey Jack cheese. Pour white wine into baking dish.</li>
+                <li>Bake in preheated oven until cheese is melted and lightly brown, 15 to 20 minutes.</li>
+            </ol>
+        </div>
+    </div>
+    
 </body>
 </html>
