--- a/pages/soft_oatmeal_cookies.html
+++ b/pages/soft_oatmeal_cookies.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soft Oatmeal Cookies</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Soft Oatmeal Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F11%2F01%2F3779973_original.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Soft Oatmeal Cookies">
     <p>These oatmeal cookies are perfectly flavored and lightly spiced with just a touch of cinnamon. They're soft, chewy, and easily customizable — just add 1 cup raisins, nuts, or chocolate chips when you mix in the oats. Keep them on hand for after-school snacking or make a batch for a holiday cookie exchange.</p>
-    <h2>Instructions</h2>
-    <ol>
-        <li><strong>Make the dough: </strong>Whisk the dry ingredients in a medium bowl. In a separate bowl, beat the butter and sugar. Beat in the eggs and vanilla. Add the dry mixture to the wet mixture, then stir in the oats. Cover and chill for at least one hour (this step is important to prevent spreading!).</li>
-        <li><strong>Roll the cookies:</strong>Roll the chilled dough into balls and place the balls on baking sheets. Dip a fork in water, then in sugar. Use the fork to flatten each dough ball.</li>
-        <li><strong>Bake the cookies: </strong>Bake in the preheated oven until the edges are golden brown and the centers are nearly set. Cool on the baking sheet for 5 minutes, then transfer to a wire rack.</li>
-    </ol>
+    <div class="directions">
+        <h2>Instructions</h2>
+        <ol>
+            <li><strong>Make the dough: </strong>Whisk the dry ingredients in a medium bowl. In a separate bowl, beat the butter and sugar. Beat in the eggs and vanilla. Add the dry mixture to the wet mixture, then stir in the oats. Cover and chill for at least one hour (this step is important to prevent spreading!).</li>
+            <li><strong>Roll the cookies:</strong>Roll the chilled dough into balls and place the balls on baking sheets. Dip a fork in water, then in sugar. Use the fork to flatten each dough ball.</li>
+            <li><strong>Bake the cookies: </strong>Bake in the preheated oven until the edges are golden brown and the centers are nearly set. Cool on the baking sheet for 5 minutes, then transfer to a wire rack.</li>
+        </ol>
+    </div>
 </body>
 </html>
