--- a/pages/swedish_meatballs.html
+++ b/pages/swedish_meatballs.html
@@ -4,46 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swedish Meatballs</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Swedish Meatballs</h1>
     <img src="https://www.allrecipes.com/thmb/lYWnWn-oP3dW1toplbQJ49U1ZpA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216564-swedish-meatballs-svenska-kottbullar-DDMFS-4x3-2cfaeac162c9485dbd7d632fd0b6ef0a.jpg" alt="Swedish Meatballs">
     <p>This Swedish meatball recipe is our family's Christmas tradition. We frequently double the recipe and keep it warm in a slow cooker. Worth the effort, and the meatballs are even better the next day! Reserve brown gravy and add sour cream to it the day you serve the leftovers.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 slices day-old white bread, crumbled</li>
-        <li>1/2 cup heavy cream</li>
-        <li>1 teaspoon butter</li>
-        <li>1 small onion, minced</li>
-        <li>2/3 pound ground beef</li>
-        <li>1/3 pound finely ground pork</li>
-        <li>1 egg</li>
-        <li>1 tablespoon brown sugar (optional)</li>
-        <li>1 teaspoon salt</li>
-        <li>1/4 teaspoon ground black pepper</li>
-        <li>1/4 teaspoon ground nutmeg</li>
-        <li>1/4 teaspoon ground allspice</li>
-        <li>1/8 teaspoon ground ginger (Optional)</li>
-        <li>1 tablespoon butter</li>
-        <li>1/4 cup chicken broth</li>
-        <li>3 tablespoon all-purpose flour, or as needed</li>
-        <li>2 cups beef broth, or as needed</li>
-        <li>1/2 (8 ounce) container sour cream</li>
-    </ul>
-    <h2>Directions</h2>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
-        <li>Place bread crumbs into a small bowl; mix in cream. Allow to stand until crumbs absorb cream, about 10 minutes</li>
-        <li>Meanwhile, melt 1 teaspoon butter in a skillet over medium heat; cook and stir onion until light brown, about 10 minutes. Transfer onion into a mixing bowl</li>
-        <li>Mix ground beef, ground pork, egg, brown sugar, salt, black pepper, nutmeg, allspice, and ginger with onion in the mixing bowl. Lightly mix in bread crumbs and cream.</li>
-        <li>Melt 1 tablespoon butter in a large skillet over medium heat. Pinch off about 1 1/2 tablespoon meat mixture per meatball; form into balls. Place meatballs into the skillet and cook, turning often, until browned, about 5 minutes. Insides of meatballs will still be pink.</li>
-        <li>Place browned meatballs into a baking dish, pour in chicken broth, and cover with foil.</li>
-        <li>Bake in the preheated oven until meatballs are tender, about 40 minutes. Remove meatballs to a serving dish.</li>
-        <li>Pour pan drippings into a saucepan over medium heat. Whisk flour into drippings until smooth.</li>
-        <li>Gradually whisk in enough beef broth to total about 2 1/2 cups liquid.</li>
-        <li>Bring gravy to a simmer, whisking constantly, until thickened, about 5 minutes.</li>
-        <li>Just before serving, whisk in sour cream. Season with salt and black pepper. Serve gravy with meatballs.</li>
-    </ol>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 slices day-old white bread, crumbled</li>
+            <li>1/2 cup heavy cream</li>
+            <li>1 teaspoon butter</li>
+            <li>1 small onion, minced</li>
+            <li>2/3 pound ground beef</li>
+            <li>1/3 pound finely ground pork</li>
+            <li>1 egg</li>
+            <li>1 tablespoon brown sugar (optional)</li>
+            <li>1 teaspoon salt</li>
+            <li>1/4 teaspoon ground black pepper</li>
+            <li>1/4 teaspoon ground nutmeg</li>
+            <li>1/4 teaspoon ground allspice</li>
+            <li>1/8 teaspoon ground ginger (Optional)</li>
+            <li>1 tablespoon butter</li>
+            <li>1/4 cup chicken broth</li>
+            <li>3 tablespoon all-purpose flour, or as needed</li>
+            <li>2 cups beef broth, or as needed</li>
+            <li>1/2 (8 ounce) container sour cream</li>
+        </ul>
+    </div>
+    <div class="directions">
+        <h2>Directions</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
+            <li>Place bread crumbs into a small bowl; mix in cream. Allow to stand until crumbs absorb cream, about 10 minutes</li>
+            <li>Meanwhile, melt 1 teaspoon butter in a skillet over medium heat; cook and stir onion until light brown, about 10 minutes. Transfer onion into a mixing bowl</li>
+            <li>Mix ground beef, ground pork, egg, brown sugar, salt, black pepper, nutmeg, allspice, and ginger with onion in the mixing bowl. Lightly mix in bread crumbs and cream.</li>
+            <li>Melt 1 tablespoon butter in a large skillet over medium heat. Pinch off about 1 1/2 tablespoon meat mixture per meatball; form into balls. Place meatballs into the skillet and cook, turning often, until browned, about 5 minutes. Insides of meatballs will still be pink.</li>
+            <li>Place browned meatballs into a baking dish, pour in chicken broth, and cover with foil.</li>
+            <li>Bake in the preheated oven until meatballs are tender, about 40 minutes. Remove meatballs to a serving dish.</li>
+            <li>Pour pan drippings into a saucepan over medium heat. Whisk flour into drippings until smooth.</li>
+            <li>Gradually whisk in enough beef broth to total about 2 1/2 cups liquid.</li>
+            <li>Bring gravy to a simmer, whisking constantly, until thickened, about 5 minutes.</li>
+            <li>Just before serving, whisk in sour cream. Season with salt and black pepper. Serve gravy with meatballs.</li>
+        </ol>
+    </div>
 </body>
 </html>
